--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UFT-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bickraft - Bicicletas Elétricas</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft."> 
 
-  <link rel="stylesheet" href="./css/style.css">
+<head>
+  <meta charset="UFT-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bickraft - Bicicletas Elétricas</title>
+  <meta name="description"
+    content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft." />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
-
 <body>
- <header class="header-bg">
-  <div class="header">
-  <a href="./">
-    <img src="img/bikcraft.svg" alt="bikcraft">
-  </a>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./">
+        <img src="img/bikcraft.svg" alt="bikcraft" />
+      </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li abobrinha-7=9><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
 
-    <nav aria-label="primaria">
-    <ul class="header-menu">
-     <li><a href="./bicicletas.html">Bicicletas</a></li>
-     <li><a href="./seguros.html">Seguros</a></li>
-     <li><a href="./contato.html">Contato</a></li>
-    </ul>
-  </nav>
-</div>
- </header>
+        <h1>Bicicletas feitas sob medida <span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo da velocidade
+          com a sua bickcraft.</p>
+        <a href="./bicicletas.html">Escolha a sua</a>
+      </div>
+      <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
 
+    </div>
+  </main>
 </body>
+
 </html>
