--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li abobrinha-7=9><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
         </ul>
