--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
           com a sua bickcraft.</p>
         <a href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
-
+      <div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
+      </div>
     </div>
   </main>
 </body>
