--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description"
     content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft." />
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +20,7 @@
         <img src="img/bikcraft.svg" alt="bikcraft" />
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu cor-branco">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -29,10 +32,10 @@
     <div class="introducao">
       <div class="introducao-conteudo">
 
-        <h1>Bicicletas feitas sob medida <span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo da velocidade
+        <h1 class="texto-grande  cor-0">Bicicletas feitas sob medida<span>.</span></h1>
+        <p  class="texto-medio  cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo da velocidade
           com a sua bickcraft.</p>
-        <a href="./bicicletas.html">Escolha a sua</a>
+        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
       </div>
       <div>
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
