--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="img/bikcraft.svg" alt="bikcraft" />
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu font-1-m cor-branco">
+        <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -30,7 +30,7 @@
     </div>
   </header>
   <main class="introducao-bg">
-    <div class="introducao">
+    <div class="introducao container-1">
       <div class="introducao-conteudo">
 
         <h1 class="texto-1-xxl  cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
@@ -44,6 +44,46 @@
       </div>
     </div>
   </main>
+  <article class="bicicletas-lista">
+
+    <h2 class="container-2">escolha a sua <span class="cor-p1">.</span></h2>
+
+    <ul>
+      <a href="./bicicletas/magic.html">
+        <li> <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+      </a>
+      </li>
+      <a href="./bicicletas/magic.html">
+        <li> <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
+      </a>
+      </li>
+      <a href="./bicicletas/magic.html">
+        <li> <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+      </a>
+      </li>
+    </ul>
+  </article>
+
+  <article class="tecnologia-bg">
+    <div class="tecnologia container-1">
+      <div class="tecnologia-conteudo">
+        <span>Tecnologia Avançada</span>
+        <h2>Você escolhe as suas cores e componentes.</h2>
+
+
+        <div class="tecnologia-imagem">
+          <img src="./img/fotos/tecnologia.jpg" alt="">
+        </div>
+      </div>
+    </div>
+
+  </article>
 </body>
 
 </html>
