--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,500&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;0,800;0,900;1,700;1,800&family=Roboto:ital,wght@0,700;1,500;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,500;0,800;1,400;1,800&family=Merriweather:wght@900&family=Poppins:ital,wght@0,400;0,600;0,700;0,800;0,900;1,700;1,800&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +31,7 @@
         <img src="img/bikcraft.svg" alt="bikcraft" />
       </a>
       <nav aria-label="primaria">
-        <ul class="header-menu font-1-m cor-0">
+        <ul class="header-menu fonte-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -30,7 +40,7 @@
     </div>
   </header>
   <main class="introducao-bg">
-    <div class="introducao container-1">
+    <div class="introducao container-2">
       <div class="introducao-conteudo">
 
         <h1 class="texto-1-xxl  cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
@@ -46,44 +56,124 @@
   </main>
   <article class="bicicletas-lista">
 
-    <h2 class="container-2">escolha a sua <span class="cor-p1">.</span></h2>
+    <h2 class="container-2 fonte-1-xl">escolha a sua <span class="cor-p1">.</span></h2>
 
     <ul>
       <a href="./bicicletas/magic.html">
         <li> <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Magic Might</h3>
-          <span class="font-2-m cor-8">R$ 2499</span>
+          <h3 class="fonte-1-xl">Magic Might</h3>
+          <span class="fonte-2-m cor-8">R$ 2499</span>
       </a>
       </li>
       <a href="./bicicletas/magic.html">
         <li> <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Nimbus Stark</h3>
-          <span class="font-2-m cor-8">R$ 4999</span>
+          <h3 class="fonte-1-xl">Nimbus Stark</h3>
+          <span class="fonte-2-m cor-8">R$ 4999</span>
       </a>
       </li>
       <a href="./bicicletas/magic.html">
         <li> <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Nebula Cosmic</h3>
-          <span class="font-2-m cor-8">R$ 3999</span>
+          <h3 class="fonte-1-xl">Nebula Cosmic</h3>
+          <span class="fonte-2-m cor-8">R$ 3999</span>
       </a>
       </li>
     </ul>
   </article>
-
   <article class="tecnologia-bg">
     <div class="tecnologia container-1">
       <div class="tecnologia-conteudo">
-        <span>Tecnologia Avançada</span>
-        <h2>Você escolhe as suas cores e componentes.</h2>
-
-
-        <div class="tecnologia-imagem">
-          <img src="./img/fotos/tecnologia.jpg" alt="">
+        <span class="fonte-2-l-b cor-5">Tecnologia Avançada</span>
+        <h2 class="fonte-xxl cor-0">Você escolhe as suas cores e componentes <span class="cor-p1">.</span></h2>
+        <p class="fonte-2-l-b cor-5">Cada Bickraft é única e possui a sua identidade. As medidas serão exatas para o seu
+          corpo
+          e altura,
+          garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas
+          cores.</p>
+        <a class="link" href="./bicicletas.html">Escolha um modelo</a>
+        <div class="tecnologia-vantagens">
+          <div>
+            <img src="./img/icones/eletrica.svg" alt="">
+            <h3 class="fonte-1-m cor-0">Motor Elétrico</h3>
+            <p class="fonte-2-m cor-5">Toda Bickraft é equipada com um motor elétrico que possui duração de até 120h. A
+              bateria é recarregada com
+              a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="./img/icones/rastreador.svg" alt="">
+            <h3 class="fonte-1-m cor-0">Rastreador</h3>
+            <p class="fonte-2-m cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e
+              sistema anti-furto para
+              garantir o seu sossego. </p>
+          </div>
         </div>
       </div>
+      <div class="tecnologia-imagem"><img src="./img/fotos/tecnologia.jpg" alt=""></div>
     </div>
 
   </article>
+  <section class="parceiros" aria aria-label="Nossos Parceiros">
+    <h2 class="container-2 fonte-2-m">Nossos Parceiros<span class="cor-p1">.</span></h2>
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" alt="Caravan"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="Ranec"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="Hander"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="Dogs"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="Lescone"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="Flexblog"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+
+    </ul>
+  </section>
+
+  <section class="depoimento" aria-label="Depoimento">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="fonte-1-xl cor-p5">
+        <p>
+          Pedalar sempre foi a minha paixão,
+          o que o pessoal da Bikcraft fez foi intensificar
+          o meu amor por essa
+          atividade. Recomendo á todos que amo.
+        </p>
+      </blockquote>
+      <span class="fonte-1-m-b cor-p4">Ana Júlia</span>
+    </div>
+  </section>
+  <article class="seguros-bg">
+    <div class="seguros container-2">
+      <h2 class="fonte-xxl  cor-0">Seguros<span class="cor-p1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="fonte-1-xl cor-6">PRATA</h3>
+        <span class="fonte-1-xl cor-0">R$ 199 <span class="fonte-1-xs cor-6">mensal</span></span>
+        <ul class="fonte-2-m cor-0">
+          <li>Duas troca por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte das 08h ás 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orçamento.html">INSCREVA-SE</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="fonte-1-xl cor-p1">OURO</h3>
+        <span class="fonte-1-xl cor-0">R$ 299 <span class="fonte-1-xs cor-6">mensal</span></span>
+        <ul class="fonte-2-m cor-0">
+          <li>cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orçamento.html">INSCREVA-SE</a>
+      </div>
+    </div>
+
+
+  </article>
+
 </body>
 
 </html>
