--- a/index.html
+++ b/index.html
@@ -4,24 +4,19 @@
 <head>
   <meta charset="UFT-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bickraft - Bicicletas Elétricas</title>
-  <meta name="description"
-    content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft." />
+  <title>Bickraft | Bicicletas Elétricas</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft." />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,500&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;0,800;0,900;1,700;1,800&family=Roboto:ital,wght@0,700;1,500;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;0,800;0,900;1,700;1,800&family=Roboto:ital,wght@0,700;1,500;1,700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,500;0,800;1,400;1,800&family=Merriweather:wght@900&family=Poppins:ital,wght@0,400;0,600;0,700;0,800;0,900;1,700;1,800&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,500;0,800;1,400;1,800&family=Merriweather:wght@900&family=Poppins:ital,wght@0,400;0,600;0,700;0,800;0,900;1,700;1,800&display=swap" rel="stylesheet">
+  <a href="termos.html"></a>
 </head>
 
 <body>
@@ -56,23 +51,23 @@
   </main>
   <article class="bicicletas-lista">
 
-    <h2 class="container-2 fonte-1-xl">escolha a sua <span class="cor-p1">.</span></h2>
+    <h2 class="fonte-1-xl container-1 ">escolha a sua<span class="cor-p1">.</span></h2>
 
     <ul>
-      <a href="./bicicletas/magic.html">
+      <a href="./bicicletas2/magic.html">
         <li> <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
           <h3 class="fonte-1-xl">Magic Might</h3>
           <span class="fonte-2-m cor-8">R$ 2499</span>
       </a>
       </li>
-      <a href="./bicicletas/magic.html">
+      <a href=".//bicicletas2/nimbus.html">
         <li> <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
           <h3 class="fonte-1-xl">Nimbus Stark</h3>
           <span class="fonte-2-m cor-8">R$ 4999</span>
       </a>
       </li>
-      <a href="./bicicletas/magic.html">
-        <li> <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+      <a href="./bicicletas2/nebula.html">
+        <li> <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta branca">
           <h3 class="fonte-1-xl">Nebula Cosmic</h3>
           <span class="fonte-2-m cor-8">R$ 3999</span>
       </a>
@@ -83,7 +78,7 @@
     <div class="tecnologia container-1">
       <div class="tecnologia-conteudo">
         <span class="fonte-2-l-b cor-5">Tecnologia Avançada</span>
-        <h2 class="fonte-xxl cor-0">Você escolhe as suas cores e componentes <span class="cor-p1">.</span></h2>
+        <h2 class="fonte-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
         <p class="fonte-2-l-b cor-5">Cada Bickraft é única e possui a sua identidade. As medidas serão exatas para o seu
           corpo
           e altura,
@@ -112,7 +107,7 @@
 
   </article>
   <section class="parceiros" aria aria-label="Nossos Parceiros">
-    <h2 class="container-2 fonte-2-m">Nossos Parceiros<span class="cor-p1">.</span></h2>
+    <h2 class="container-2 fonte-1-m-b">Nossos Parceiros<span class="cor-p1">.</span></h2>
     <ul>
       <li><img src="./img/parceiros/caravan.svg" alt="Caravan"></li>
       <li><img src="./img/parceiros/ranek.svg" alt="Ranec"></li>
@@ -144,7 +139,7 @@
   </section>
   <article class="seguros-bg">
     <div class="seguros container-2">
-      <h2 class="fonte-xxl  cor-0">Seguros<span class="cor-p1">.</span></h2>
+      <h2 class="fonte-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
       <div class="seguros-item">
         <h3 class="fonte-1-xl cor-6">PRATA</h3>
         <span class="fonte-1-xl cor-0">R$ 199 <span class="fonte-1-xs cor-6">mensal</span></span>
@@ -170,10 +165,44 @@
         <a class="botao" href="./orçamento.html">INSCREVA-SE</a>
       </div>
     </div>
-
-
   </article>
-
+  <footer class="footer-bg">
+    <div class="footer container-2">
+      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="fonte-1-l cor-0">Contato</h3>
+        <ul class="cor-5 fonte-2-l-b">
+          <li><a href="tel:+55 21 99999999">+55 21 9999-9999</a></li>
+          <li><a href="mailto:bikcraft@contato.com">bikcraft@contato.com</a></li>
+          <li>RUA ALI PERTO, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="./img/redes/instagram.svg" alt="instagram">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="fonte-1-l cor-0">Informações</h3>
+        <nav>
+          <ul class="cor-5 fonte-2-l-b">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguro.html">Seguros</a></a></li>
+            <li><a href="./contato.html">Contato</a></a></li>
+            <li><a href="./termos.html">Termos e Condições</a></a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy  fonte-1-l cor-6">Bikcraft © Alguns direitos reservados</p>
+    </div>
+  </footer>
 </body>
 
 </html>
