--- a/bicicletas.html
+++ b/bicicletas.html
@@ -77,7 +77,7 @@
           rastreador
         </li>
       </ul>
-      <a class="botao seta" href="./bicicletas2/nimbus.html">Mais Sobre</a>
+      <a class="botao seta" href="../bicicletas2/nimbus.html">Mais Sobre</a>
     </div>
   </div>
 
@@ -111,7 +111,7 @@
             rastreador
           </li>
         </ul>
-        <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
+        <a class="botao seta" href="../bicicletas2/magic.html">Mais Sobre</a>
       </div>
     </div>
   </div>
@@ -145,7 +145,7 @@
           rastreador
         </li>
       </ul>
-      <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+      <a class="botao seta" href="../bicicletas2/nebula.html">Mais Sobre</a>
     </div>
   </div>
 
