--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
     <h2 class="fonte-1-xl container-1 ">escolha a sua<span class="cor-p1">.</span></h2>
 
     <ul>
-      <a href="./bicicletas2/magic.html">
+      <a href="../bicicletas2/magic.html">
         <li> <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
           <h3 class="fonte-1-xl">Magic Might</h3>
           <span class="fonte-2-m cor-8">R$ 2499</span>
       </a>
       </li>
-      <a href=".//bicicletas2/nimbus.html">
+      <a href="../bicicletas2/nimbus.html">
         <li> <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
           <h3 class="fonte-1-xl">Nimbus Stark</h3>
           <span class="fonte-2-m cor-8">R$ 4999</span>
       </a>
       </li>
-      <a href="./bicicletas2/nebula.html">
+      <a href="../bicicletas2/nebula.html">
         <li> <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta branca">
           <h3 class="fonte-1-xl">Nebula Cosmic</h3>
           <span class="fonte-2-m cor-8">R$ 3999</span>
