--- a/seguros.html
+++ b/seguros.html
@@ -52,7 +52,7 @@
       <h3 class="fonte-1-xl cor-6">PRATA</h3>
       <span class="fonte-1-xl cor-0">R$ 199 <span class="fonte-1-xs cor-6">mensal</span></span>
       <ul class="fonte-2-m cor-0">
-        <li>Duas troca por ano</li>
+        <li>Duas trocas por ano</li>
         <li>Assistência técnica</li>
         <li>Suporte das 08h ás 18h</li>
         <li>Cobertura estadual</li>
