--- a/orçamento.html
+++ b/orçamento.html
@@ -5,7 +5,7 @@
   <meta charset="UFT-8" />
   <title>Orçamento | Bikcraft.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Orçamento." />
+  <meta name="description" content="Orçamentos." />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,11 +24,13 @@
   <link rel="stylesheet" href="orçamento.html">
 </head>
 
+ <body id="orcamento">
 <header class="header-bg">
   <div class="header">
     <a href="./">
       <img src="img/bikcraft.svg" alt="bikcraft" />
     </a>
+
     <nav aria-label="primaria">
       <ul class="header-menu fonte-1-m cor-0">
         <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -42,86 +44,116 @@
 <main>
   <div class="titulo-bg">
     <div class="titulo container-2">
-      <p class="fonte-2-l-b cor-5">Cotações no seu Email</p>
-      <h1 class="fonte-1-xl cor-0">Solicite um Orçamento <span class="cor-p1">.</span></h1>
+      <p class="fonte-2-l-b cor-5">Cotações no seu email </p>
+      <h1 class="fonte-1-xl cor-0">Solicite um orçamento<span class="cor-p1">.</span></h1>
     </div>
   </div>
 
-  
-  <form class="orcamento container-2" action="./ ">
+  <form class="orcamento container-2 "action="./">
     <div class="orcamento-produto">
-      <h2 class="fonte-1-xs cor-5">Bikcraft ou Seguro?</h2>
+      <h2 class="fonte-1-xs cor-5">Bikcraft ou seguro?</h2>
 
-      <input type="radio" name="tipo" value="bikcraft" id="bikcraft">
+
+      <input type="radio" name="tipo" valor="bikcraft" id="bikcraft">
       <label for="bikcraft">Bikcraft</label>
 
-      <input type="radio" name="tipo" value="seguro" id="seguro">
+      <input type="radio" name="tipo" valor="seguro" id="seguro">
       <label for="seguro">seguro</label>
 
       <div class="orcamento-conteudo" id="orcamento-bikcraft">
-        <h2 class="fonte-1-xs cor-0">escolha a sua (BIKCRAFT)</h2>
+        <h2 class="fonte-1-xs cor-5">Escolha a sua(BIKCRAFT)
+
+          <input type="radio" name="produto" valor="nimbus" id="nimbus">
+            <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+            
+
+              <input type="radio" name="produto" valor="magic" id="magic">
+                <label for="magic">Magic Might  <span>R$ 2499</span></label>
+
+                    <input type="radio" name="produto" valor="nebula" id="nebula">
+                      <label for="nebula">Nebula Cosmic  <span>R$ 3999</span></label>
+        
       </div>
 
       <div class="orcamento-conteudo" id="orcamento-seguro">
-        <h2 class="fonte-1-xs cor-0">escolha o plano</h2>
-      </div>
+        <h2 class="fonte-1-xs cor-5">Escolha o plano</h2>
 
+        <input type="radio" name="produto" valor="prata" id="prata">
+          <label for="prata">Prata  <span>R$ 199</span></label>
+
+          <input type="radio" name="produto" valor="ouro" id="ouro">
+           <label for="ouro">Ouro <span>R$ 299</span></label>
+      </div>
 
     </div>
-    <div class="orcamento-dados forms">
-      <h2 class="fonte-1-xs cor-9 col-2">Dados Pessoais</h2>
-      <div>
-        <label for="nome">Nome</label>
-        <input type="text" name="nome" id="nome">
-      </div>
-      <div>
-        <label for="sobrenome">Sobrenome</label>
-        <input type="text" name="sobrenome" id="sobrenome">
-      </div>
-      <div>
-        <label for="cpf">CPF </label>
-        <input type="text" name="CPF " id="CPF" placeholder="000.000.000-00">
-      </div>
-      <div class="col-2">
-        <label for="email">Email </label>
-        <input type="email" name="Email " id="Email">
-      </div>
-      <h2 class="fonte-1-xs cor-9 col-2">Entrega</h2>
-      <div class="col-2">
-        <label for="email">Email </label>
-        <input type="email" name="Email " id="Email">
-      </div>
-      <div>
-        <label for="cep">CEP </label>
-        <input type="text" name="CEP " id="CEP">
-      </div>
-      <div>
-        <label for="numero">numero</label>
-        <input type="text" name="numero" id="numero">
-      </div>
-      <div>
-        <label for="logradouro">logradouro</label>
-        <input type="text" name="logradouro" id="logradouro">
-      </div>
-      <div>
-        <label for="bairro">bairro</label>
-        <input type="text" name="bairro" id="bairro">
-      </div>
-      <div>
-        <label for="cidade">cidade</label>
-        <input type="text" name="cidade" id="cidade">
-      </div>
-      <div>
-        <label for="estado">estado</label>
-        <input type="text" name="estado" id="estado">
-      </div>
-      <button class="botao col-2">Solicitar Orçamento</button>
+
+      <div class="orcamento-dados forms">
+        <h2 class="fonte-1-xs cor-9">Dados pessoais</h2>
+
+        <div>
+          <label for="nome">Nome</label>
+          <input type="text" name="nome" id="nome">
+        </div>
+
+        <div >
+          <label for="sobrenome">Sobrenome</label>
+          <input type="text" name="sobrenome" id="sobrenome">
+        </div>
+
+        <div>
+          <label for="sobrenome">Sobrenome</label>
+          <input type="text" name="sobrenome" id="sobrenome">
+        </div>
+
+         <div class="col-2">
+          <label for="cpf">CPF</label>
+          <input type="text" name="cpf" id="cpf" placeholder="000.000.000-00">
+        </div>
+
+        <div class="col-2">
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email">
+        </div>
+
+        <h2 class="fonte-1-xs cor-9">Entrega</h2>
+
+        <div>
+          <label for="cep">CEP </label>
+          <input type="text" name="cep" id="cep">
+        </div>
+
+        <div>
+          <label for="numero">Número</label>
+          <input type="text" name="numero" id="numero">
+        </div>
+
+        <div>
+          <label for="logradouro">Logradouro</label>
+          <input type="text" name="logradouro" id="logradouro">
+        </div>
+
+        <div>
+          <label for="bairro">Bairro</label>
+          <input type="text" name="bairro" id="bairro">
+        </div>
+
+        <div>
+          <label for="cidade">Cidade</label>
+          <input type="text" name="cidade" id="cidade">
+        </div>
+
+        <div>
+          <label for="estado">Estado</label>
+          <input type="text" name="estado" id="estado">
+        </div>
+
+          <button class="botao col-2">Solicitar Orçamento</button>
+      </div> 
     </div>
   </form>
-   
 </main>
 
-<body id="orcamento">
+
   <footer class="footer-bg">
     <div class="footer container-2">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
