--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bickraft | Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft." />
-  <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">
@@ -17,6 +16,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,500;0,800;1,400;1,800&family=Merriweather:wght@900&family=Poppins:ital,wght@0,400;0,600;0,700;0,800;0,900;1,700;1,800&display=swap" rel="stylesheet">
   <a href="termos.html"></a>
+
+
+  <link rel="preload" href="./css/style.css" as/>
+  <link rel="stylesheet" href="./css/style.css"/>
+  
 </head>
 
 <body>
@@ -44,9 +48,14 @@
           com a sua bickcraft.</p>
         <a class="botao" href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <div>
+
+      <picture>
+
+      <source srcset="./img/bicicletas/nimbus.jpg"> 
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
-      </div>
+
+      </picture>
+
     </div>
   </main>
   <article class="bicicletas-lista">
