--- a/orçamento.html
+++ b/orçamento.html
@@ -22,6 +22,9 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,500;0,800;1,400;1,800&family=Merriweather:wght@900&family=Poppins:ital,wght@0,400;0,600;0,700;0,800;0,900;1,700;1,800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="orçamento.html">
+
+  <link rel="preload" href="./css/style.css" as="style"/>
+  <link rel="stylesheet" href="./css/style.css"/>
 </head>
 
  <body id="orcamento">
@@ -61,17 +64,44 @@
       <label for="seguro">seguro</label>
 
       <div class="orcamento-conteudo" id="orcamento-bikcraft">
-        <h2 class="fonte-1-xs cor-5">Escolha a sua(BIKCRAFT)
+        <h2 class="fonte-1-xs cor-5">Escolha a sua</h2>
 
           <input type="radio" name="produto" valor="nimbus" id="nimbus">
             <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+            <div class="orcamento-detalhes">
+             <ul class="fonte-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt=" ">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt=" ">Fibra de Carbono </li>
+              <li><img src="./img/icones/velocidade.svg" alt=" ">50 KM/H</li>
+              <li><img src="./img/icones/rastreador.svg" alt=" ">Rastreador</li>
+             </ul>
+             <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+            </div>
             
 
               <input type="radio" name="produto" valor="magic" id="magic">
                 <label for="magic">Magic Might  <span>R$ 2499</span></label>
+                <div class="orcamento-detalhes">
+                  <ul class="fonte-1-xs cor-8">
+                   <li><img src="./img/icones/eletrica.svg" alt=" ">Motor Elétrico</li>
+                   <li><img src="./img/icones/carbono.svg" alt=" ">Fibra de Carbono </li>
+                   <li><img src="./img/icones/velocidade.svg" alt=" ">45 KM/H</li>
+                   <li><img src="./img/icones/rastreador.svg" alt=" ">Rastreador</li>
+                  </ul>
+                  <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+                 </div>
 
                     <input type="radio" name="produto" valor="nebula" id="nebula">
-                      <label for="nebula">Nebula Cosmic  <span>R$ 3999</span></label>
+                      <label for="nebula">Nebula Cosmic<span>R$ 3999</span></label>
+                      <div class="orcamento-detalhes">
+                        <ul class="fonte-1-xs cor-8">
+                         <li><img src="./img/icones/eletrica.svg" alt=" ">Motor Elétrico</li>
+                         <li><img src="./img/icones/carbono.svg" alt=" ">Fibra de Carbono </li>
+                         <li><img src="./img/icones/velocidade.svg" alt=" ">40 KM/H</li>
+                         <li><img src="./img/icones/rastreador.svg" alt=" ">Rastreador</li>
+                        </ul>
+                        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+                       </div>
         
       </div>
 
@@ -90,20 +120,16 @@
       <div class="orcamento-dados forms">
         <h2 class="fonte-1-xs cor-9">Dados pessoais</h2>
 
-        <div>
+        <div class="col-2">
           <label for="nome">Nome</label>
           <input type="text" name="nome" id="nome">
         </div>
 
-        <div >
+        <div class="col-2" >
           <label for="sobrenome">Sobrenome</label>
           <input type="text" name="sobrenome" id="sobrenome">
         </div>
 
-        <div>
-          <label for="sobrenome">Sobrenome</label>
-          <input type="text" name="sobrenome" id="sobrenome">
-        </div>
 
          <div class="col-2">
           <label for="cpf">CPF</label>
@@ -117,7 +143,7 @@
 
         <h2 class="fonte-1-xs cor-9">Entrega</h2>
 
-        <div>
+        <div class="col-2">
           <label for="cep">CEP </label>
           <input type="text" name="cep" id="cep">
         </div>
