--- a/termos.html
+++ b/termos.html
@@ -22,6 +22,9 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,500;0,800;1,400;1,800&family=Merriweather:wght@900&family=Poppins:ital,wght@0,400;0,600;0,700;0,800;0,900;1,700;1,800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="termos.html">
+  
+  <link rel="preload" href="./css/style.css" as="style"/>
+  <link rel="stylesheet" href="./css/style.css"/>
 </head>
 
 <header class="header-bg">
