--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   <title>Bickraft - Bicicletas Elétricas</title>
   <meta name="description"
     content="Bicicletas elétricas de alta precisão e qualidade feitas sob medida para o cliente. Explore o mundo na sua Bickraft." />
+
   <link rel="stylesheet" href="./css/style.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&family=Roboto:ital,wght@0,700;1,500;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/utiliidades/cores.css">
+
 </head>
 
 <body>
@@ -28,11 +41,12 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-
-        <h1>Bicicletas feitas sob medida <span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo da velocidade
+        <h1 class="texto-gande c-0">Bicicletas feitas sob medida<span>.</span></h1>
+        <p class="texto-medio c-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
+          Explore o
+          mundo da velocidade
           com a sua bickcraft.</p>
-        <a href="./bicicletas.html">Escolha a sua</a>
+        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
       </div>
       <div>
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta." />
